<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">SosaGym</string>
    //menu
    <string name="title_home">Home</string>
    <string name="title_rutinas">Routines</string>
    <string name="title_chat">Chat</string>
    <string name="title_dietas">Diets</string>
    <string name="title_ajustes">Settings</string>
    //loginFragment
    <string name="lg_welcome">Welcome</string>
    <string name="lg_Ini">Login</string>
    <string name="lg_Ini2">Sign in to continue</string>
    <string name="lg_Regis">Register</string>
    <string name="lg_email">Email</string>
    <string name="lg_pass">Password</string>
    <string name="lg_phpass">password 6 characters min</string>
    //RegisFramgent
    <string name="rg_Regis">Register</string>
    <string name="rg_linklogin">Do you already have an account? Log in here</string>
    <string name="rg_name">Name</string>
    <string name="rg_nameuserph">User Name</string>
    <string name="rg_email">Email</string>
    <string name="rg_pass">Password</string>
    <string name="rg_phpass">password 6 characters min</string>
    <string name="rg_Regis2">register</string>
    <string name="rg_back">Back</string>
    //UserCompleteFragment
    <string name="uc_Welcome">Welcome!</string>
    <string name="uc_name">NAME</string>
    <string name="uc_Start">Get Started</string>
    //FragmentSettings
    <string name="af_actudatos">Update data</string>
    <string name="af_altura">Height:</string>
    <string name="af_peso">Weight:</string>
    <string name="af_cambiaridioma">Change Language</string>
    <string name="af_cambiartema">Change theme</string>
    <string name="af_cerrarsesion">Log out</string>
    <string name="af_pregcerrarsesion">Are you sure you want to log out?</string>
    <string name="af_confcerrarsesion">Confirm</string>
    //DietasFragment
    <string name="df_calendarTitle">EVENT DATE</string>
    <string name="df_Comida">Meal</string>
    <string name="df_Cantidad">Amount</string>
    <string name="df_Kcal">Kcal/100gr</string>
    <string name="df_KcalComida">Kcal</string>
    <string name="df_btnAñaComida">Add meal</string>
    <string name="df_kcaltotalessuma">Total Kcal:</string>
    <string name="cf_hintPieComment">Write here your description</string>
    <string name="cf_btncancelar">Cancel</string>
    <string name="cf_publicar">Publish</string>
    <string name="cf_comentarios">Comments</string>
    <string name="cf_hinted">Write here your comment</string>
    <string name="df_toastSinRegistros">" There are no records for this day"</string>
    <string name="df_relleneCampos">Fill in the fields</string>
    <string name="df_comidaeliminada">Meal disposed correctly</string>
    <string name="df_comidaguardada">Meal stored correctly</string>
    //rutinasFragment
    <string name="rf_title">Routines</string>
    <string name="rf_addrutina">Add routine</string>
    <string name="rf_nombrerutina">Routine name</string>
    <string name="rf_crearrutina">Create</string>
    <string name="rf_ejs">Exercises</string>
    <string name="rf_addejs">Add exercises-</string>
    <string name="rf_addejscorrect">Exercise added successfully</string>

    //HomeFragment
    <string name="hf_Hello">Hello</string>
    <string name="hf_Subtitle">Lets train!</string>
    <string name="hf_pormedio">Average weight per month</string>
    <string name="hm_enero">January</string>
    <string name="hm_febrero">February</string>
    <string name="hm_marzo">March</string>
    <string name="hm_abril">April</string>
    <string name="hm_mayo">May</string>
    <string name="hm_junio">June</string>
    <string name="hm_julio">July</string>
    <string name="hm_agosto">August</string>
    <string name="hm_septiembre">September</string>
    <string name="hm_oc">October</string>
    <string name="hm_nov">November</string>
    <string name="hm_dic">December</string>
    <string name="hm_enero2">J</string>
    <string name="hm_febrero2">F</string>
    <string name="hm_marzo2">M</string>
    <string name="hm_abril2">A</string>
    <string name="hm_mayo2">M</string>
    <string name="hm_junio2">J</string>
    <string name="hm_julio2">J</string>
    <string name="hm_agosto2">A</string>
    <string name="hm_septiembre2">S</string>
    <string name="hm_oc2">O</string>
    <string name="hm_nov2">N</string>
    <string name="hm_dic2">D</string>


</resources>