<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.pruebamenu.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_rutinas"
        android:name="com.example.pruebamenu.ui.dashboard.DashboardFragment"
        android:label="@string/title_rutinas"
        tools:layout="@layout/fragment_dashboard" />

    <fragment
        android:id="@+id/navigation_chat"
        android:name="com.example.pruebamenu.ui.notifications.NotificationsFragment"
        android:label="@string/title_chat"
        tools:layout="@layout/fragment_notifications" />
    <fragment
        android:id="@+id/navigation_dietas"
        android:name="com.example.pruebamenu.ui.notifications.NotificationsFragment"
        android:label="@string/title_dietas"
        tools:layout="@layout/fragment_dietas" />
</navigation>